// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HDHub4u handle stranger things s05e01 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubdrive.space/file/2452204677",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcdn.fans/file/8kEamo5bv3KOCwzJfUwGfyyBO",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hdstream4u.com/file/hpow0ir439f7",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubdrive.space/file/1788432714",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcdn.fans/file/08ZDmgm3XGClD9qMG1q8wSkhZ",
  },
]
`;

exports[`HDHub4u handle stranger things s05e08 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hdstream4u.com/file/9b9nv3pdrjx7",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubdrive.space/file/1793632174",
  },
]
`;

exports[`HDHub4u handle superman 2025 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubdrive.space/file/2048323831",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubdrive.space/file/1931317982",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubdrive.space/file/7875454809",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubdrive.space/file/3608508909",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hdstream4u.com/file/euzlk6l3jb90",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95885",
    },
    "url": "https://hblinks.dad/",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95885",
    },
    "url": "https://hubcdn.fans/file/unjuCFnbWh9HgdFnf8KWM0gNF",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95885",
    },
    "url": "https://hubcloud.foo/drive/br14bbbiccby1zn",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95885",
    },
    "url": "https://hubdrive.space/file/2171324800",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95884",
    },
    "url": "https://hblinks.dad/",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95884",
    },
    "url": "https://hubcdn.fans/file/UtYwC98y7q2XLd3XjjPFubHpU",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95884",
    },
    "url": "https://hubcloud.foo/drive/py7yy6tpqeul1al",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95884",
    },
    "url": "https://hubdrive.space/file/1866728891",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95883",
    },
    "url": "https://hblinks.dad/",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95883",
    },
    "url": "https://hubcdn.fans/file/l7tTvPxTw5xkzmmt21NCt67Ax",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95883",
    },
    "url": "https://hubcloud.foo/drive/uua1yl66o44u6mr",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95883",
    },
    "url": "https://hubdrive.space/file/3938026297",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95882",
    },
    "url": "https://hblinks.dad/",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95882",
    },
    "url": "https://hubcdn.fans/file/k7mWab8DaoCasF9g5K3w4NkvQ",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95882",
    },
    "url": "https://hubcloud.foo/drive/avvnhdvoxl1y1q2",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/95882",
    },
    "url": "https://hubdrive.space/file/2823990434",
  },
]
`;

exports[`HDHub4u handle the bone temple 2026 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubdrive.space/file/2165806385",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubdrive.space/file/2777734670",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubdrive.space/file/6051118182",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubdrive.space/file/13783802255",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hdstream4u.com/file/wy2aqiryh4hp",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/104571",
    },
    "url": "https://hblinks.dad/",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/104571",
    },
    "url": "https://hubcdn.fans/file/9aZMnNKrsUKOwqu7xPVJHdY9E",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/104571",
    },
    "url": "https://hubcloud.foo/drive/vdz6j3v16hcjkv1",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/104571",
    },
    "url": "https://hubdrive.space/file/2026023433",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/104570",
    },
    "url": "https://hblinks.dad/",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/104570",
    },
    "url": "https://hubcdn.fans/file/8EGxOgumBUUPbNraUZiYVdxrh",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/104570",
    },
    "url": "https://hubcloud.foo/drive/prhvvpxzam7rpva",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/104570",
    },
    "url": "https://hubdrive.space/file/4232622187",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "hi",
      ],
    },
    "url": "https://hubdrive.space/file/2298599706",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "hi",
      ],
    },
    "url": "https://hdstream4u.com/file/595p423rapcl",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/103118",
    },
    "url": "https://hblinks.dad/",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/103118",
    },
    "url": "https://hubcdn.fans/file/zGJJai9ztO2vSCjVRe2SLguFI",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/103118",
    },
    "url": "https://hubcloud.foo/drive/cqhutwars6jjrtd",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/103118",
    },
    "url": "https://hubdrive.space/file/2291074311",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/103119",
    },
    "url": "https://hblinks.dad/",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/103119",
    },
    "url": "https://hubcdn.fans/file/tnLb9vXZhFvBslFQcwUWqx9sp",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/103119",
    },
    "url": "https://hubcloud.foo/drive/brkmtrr9qaxqbgt",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "hi",
      ],
      "referer": "https://hblinks.dad/archives/103119",
    },
    "url": "https://hubdrive.space/file/2244066767",
  },
]
`;
